[gd_scene load_steps=5 format=2]

[ext_resource path="res://font/Aloevera-OVoWO.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://TerrainGUIPanel.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="TerrainGUIPanel" type="Panel"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -840.0
margin_bottom = -548.0
size_flags_vertical = 3
columns = 3

[node name="OctavesLabel" type="Label" parent="Control/GridContainer"]
margin_right = 137.0
margin_bottom = 36.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Octaves"

[node name="OctavesValue" type="Label" parent="Control/GridContainer"]
margin_left = 255.0
margin_top = 2.0
margin_right = 335.0
margin_bottom = 33.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 2 )
text = "4"
align = 1
valign = 3

[node name="OctavesSlider" type="HSlider" parent="Control/GridContainer"]
margin_left = 339.0
margin_right = 539.0
margin_bottom = 36.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
min_value = 1.0
max_value = 8.0
value = 4.0
rounded = true
ticks_on_borders = true

[node name="PeriodLabel" type="Label" parent="Control/GridContainer"]
margin_top = 40.0
margin_right = 109.0
margin_bottom = 76.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Period"

[node name="PeriodValue" type="Label" parent="Control/GridContainer"]
margin_left = 255.0
margin_top = 42.0
margin_right = 335.0
margin_bottom = 73.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 2 )
text = "128"
align = 1
valign = 3

[node name="PeriodSlider" type="HSlider" parent="Control/GridContainer"]
margin_left = 339.0
margin_top = 40.0
margin_right = 539.0
margin_bottom = 76.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
min_value = 1.0
max_value = 512.0
value = 128.0
rounded = true
ticks_on_borders = true

[node name="PersistenceLabel" type="Label" parent="Control/GridContainer"]
margin_top = 80.0
margin_right = 202.0
margin_bottom = 116.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Persistence"

[node name="PersistenceValue" type="Label" parent="Control/GridContainer"]
margin_left = 255.0
margin_top = 82.0
margin_right = 335.0
margin_bottom = 113.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 2 )
text = "0.4"
align = 1
valign = 3

[node name="PersistenceSlider" type="HSlider" parent="Control/GridContainer"]
margin_left = 339.0
margin_top = 80.0
margin_right = 539.0
margin_bottom = 116.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 0.4
ticks_on_borders = true

[node name="LucanarityLabel" type="Label" parent="Control/GridContainer"]
margin_top = 120.0
margin_right = 179.0
margin_bottom = 156.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Lucanarity"

[node name="LucanarityValue" type="Label" parent="Control/GridContainer"]
margin_left = 255.0
margin_top = 122.0
margin_right = 335.0
margin_bottom = 153.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 2 )
text = "2"
align = 1
valign = 3

[node name="LucanaritySlider" type="HSlider" parent="Control/GridContainer"]
margin_left = 339.0
margin_top = 120.0
margin_right = 539.0
margin_bottom = 156.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
max_value = 4.0
step = 0.1
value = 2.0
ticks_on_borders = true

[node name="AmplitudeLabel" type="Label" parent="Control/GridContainer"]
margin_top = 160.0
margin_right = 163.0
margin_bottom = 196.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Amplitude"

[node name="AmplitudeValue" type="Label" parent="Control/GridContainer"]
margin_left = 255.0
margin_top = 162.0
margin_right = 335.0
margin_bottom = 193.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 3

[node name="AmplitudeSlider" type="HSlider" parent="Control/GridContainer"]
margin_left = 339.0
margin_top = 160.0
margin_right = 539.0
margin_bottom = 196.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
min_value = 0.1
max_value = 4.0
step = 0.1
value = 1.0
ticks_on_borders = true

[node name="ExponentiationLabel" type="Label" parent="Control/GridContainer"]
margin_top = 200.0
margin_right = 251.0
margin_bottom = 236.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Exponentiation"

[node name="ExponentiationValue" type="Label" parent="Control/GridContainer"]
margin_left = 255.0
margin_top = 202.0
margin_right = 335.0
margin_bottom = 233.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 3

[node name="ExponentiationSlider" type="HSlider" parent="Control/GridContainer"]
margin_left = 339.0
margin_top = 200.0
margin_right = 539.0
margin_bottom = 236.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
min_value = 0.1
max_value = 4.0
step = 0.1
value = 1.0
ticks_on_borders = true
